# meeshbot

./: .env.example  .gitignore  .prettierrc  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  eslint.config.js  justfile  mypy.ini  oxyde_config.py  package-lock.json  package.json  pyproject.toml  ruff.toml  schema.sql  worker-configuration.d.ts  wrangler.jsonc
meeshbot/: app.py  config.py  main.py  reminders.py  shell.py
meeshbot/commands/: __init__.py  help.py  ping.py  registry.py  reminders.py  roll.py  scoreboard.py  sync.py  timeout.py  what_is_jeff.py  what_is_sam.py  whatisjeff.py  whatissam.py
meeshbot/handlers/: groupme.py
meeshbot/migrations/: 0001_create_groupmeuser_table.py  0002_drop_groupmebot_table.py  0003_add_favorited_by_to_groupmemessage.py  0004_create_reminder_table.py  0005_add_favorited_by_to_groupmemessage.py  0006_drop_favorited_by_from_groupmemessage.py  0008_create_flag_table.py
meeshbot/models/: __init__.py  bot.py  bot.pyi  flag.py  flag.pyi  group.py  group.pyi  message.py  message.pyi  reminder.py  reminder.pyi  user.py  user.pyi
meeshbot/scheduled/: reminders.py  scheduler.py
meeshbot/utils/: dates.py  flags.py  logging.py
migrations/: 0001_create_groupmeuser_table.py  0001_initial.py
scripts/: local-test.sh
src/: chat.ts  commands.ts  index.ts  registry.ts  types.ts  utils.ts
src/commands/: admin.ts  basic.ts  chat.ts  registry.ts  reminders.ts  sports.ts
src/integrations/: ai.ts  db.ts  groupMe.ts  mlb.ts
src/mcp/: base.ts  tools.ts
src/utils/: datetime.ts  db.ts
(+10 files in other folders)
