[project]
name = "meeshbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "structlog>=25.5.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "ipython>=9.0.0",
    "mypy>=1.19.1",
    "ruff>=0.15.5",
    "types-requests>=2.32.4.20260107",
]

